fix temp dark mode

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -91,10 +91,14 @@ hr {
 html[data-theme="dark"] {
   background-color: var(--bg-color);
 }
-
+/*
 html[data-theme="dark"] body {
   background-color: var(--bg-color);
   color: var(--text-color);
+}*/
+html[data-theme="dark"] body {
+  background: black !important;
+  color: white !important;
 }
 
 html[data-theme="dark"] .site-header,
